Vertical-align fix

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -13,7 +13,7 @@ body{font-size:14px}
   .carousel-inner .carousel-control-next .material-icons{font-size:36px;height:36px;position:inherit}
   .carousel-inner ul{font-size:1.125rem;line-height:1.5em;list-style-type:none;padding:0}
   .carousel-inner ul.grey{color:#eee}
-  .carousel-inner ul a{color:#e89b35;font-size:1.2rem!important}
+  .carousel-inner ul a{color:#e89b35;font-size:1.125rem!important}
     .carousel-inner ul a:hover{text-decoration:underline}
   .carousel-inner ul .material-icons{font-size:1rem;font-weight:bold;position:relative;top:2px}
   .carousel-inner .carousel-control-next .btn{margin-top:36px;padding:24px 36px}
@@ -47,6 +47,7 @@ h5{color:#ccc}
 }
 
 .height_fix{height: calc(100% - 200px);overflow-y:auto}
+  .height_fix>div{margin:auto 0}
 
 .carousel.carousel-fade .carousel-item.active{opacity:1!important;z-index:1}
 .carousel, .carousel-inner, .carousel-item{height:100%}
